--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         />
         <button
           onclick="addTask()"
-          id="addTodo"
+          id="addTask"
           class="bg-indigo-600 text-white py-2 px-4 rounded-md hover:bg-indigo-700"
         >
           Add Task
@@ -39,7 +39,7 @@
     </div>
   </main>
   <script>
-    const todosContainer = document.querySelector("#tasks");
+    const tasksContainer = document.querySelector("#tasks");
     let tasks = [];
 
     function display(data) {
@@ -56,9 +56,11 @@
             <p class="text-gray-600 font-medium text-center"><span class="math-inline">\{task\.priority \|\| "Normal"\}</p\>
 <div class\="flex justify\-end items\-center gap\-2"\>
 <button class\="bg\-gray\-200 text\-gray\-500 hover\:bg\-gray\-300 p\-1 rounded\-md" onclick\="editTask\(</span>{task.id})">
-                <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 16l6 6m-2-10l6 6"></path></svg>
+                <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 16l6 6m-2-10l6 6"></path></svg>
               </button>
               <button class="bg-gray-200 text-gray-500 hover:bg-gray-300 p-1 rounded-md" onclick="deleteTask(${task.id})">
-                <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7
+                <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7
 
 
